--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 <style>
 
 .borderTop {
-	border-top : 4px solid lightgrey;
+	border-top : 4px solid #C5C5C5;
 }
 .borderLeft {
-	border-left : 4px solid lightgrey;
+	border-left : 4px solid #C5C5C5;
 }
 .borderRight {
-	border-right : 4px solid darkgrey;
+	border-right : 4px solid #A0A0A0;
 }
 .borderBottom {
-	border-bottom : 4px solid darkgrey;
+	border-bottom : 4px solid #A0A0A0;
 }
 .selectRed {
-	background-color : red;
+	background-color : #FA8072;
 }
 .selectBlue {
-    background-color : blue;
+    background-color : #4363B9;
 }
 .allowedLeft {
     border-left : 4px solid dimgrey;
@@ -43,7 +43,7 @@
 td {
 	width : 50px;
 	height : 50px;
-	background-color : lightblue;
+	background-color : #D5D5D5;
 }
 table {
 	margin : auto;
@@ -254,9 +254,9 @@ function zero2D(rows, cols) {
 
 </script>
 </head>
-<body>
-<h1>Ultimate Tic Tac Toe</h1>
-<h3>v.0.9 (work in progress)</h3>
+<body bgcolor="#F1F1F4">
+<h1 style="font-family:Sans-Serif;">Ultimate Tic Tac Toe</h1>
+<font face="Sans-Serif">Click here for a new game!</font>
     <table id="game"></table>
 </body>
 </html>
