--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var allgoes=false
 var ws
 $(function() {
 	// on window.load
-	ws = new WebSocket("ws://188.226.182.209:80/ws")
+	ws = new WebSocket("ws://ultimatic.io:80/ws")
 	ws.onopen = function() {
 		//ws.send(JSON.stringify(["SUBSCRIBE", "test"]));
         load()
