added html head title

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ body {
        font-family:sans-serif;
 }
 </style>
+<title>Ultimate Tic-Tac-Toe</title>
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript">
 
