fixed some text

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ function zero2D(rows, cols) {
 </script>
 </head>
 <body bgcolor="#F1F1F4">
-<h1>Ultimate Tic Tac Toe</h1>
+<h1>Ultimate Tic-Tac-Toe</h1>
 <br>
 Have your friend open this URL on his machine and you can start playing!
 <br><br>
